--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>${http.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<!-- spring -->
 		<dependency>
@@ -134,17 +146,10 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${org.slf4j.version}</version>
 		</dependency>
-
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${org.slf4j.version}</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -153,7 +158,7 @@
 			<version>${org.slf4j.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		
 		<!-- test scoped -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -214,6 +219,12 @@
 			<artifactId>rest-assured</artifactId>
 			<version>1.4</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
@@ -422,21 +433,20 @@
 		<cglib.version>2.2.2</cglib.version>
 
 		<commons-lang3.version>3.0.1</commons-lang3.version>
-		<guava.version>10.0-rc2</guava.version>
+		<guava.version>10.0.1</guava.version>
 
 		<jackson-mapper-asl.version>1.8.5</jackson-mapper-asl.version>
 		<xstream.version>1.2.2</xstream.version>
 		<jaxb-api.version>2.2.4</jaxb-api.version>
 
 		<!-- VERSIONS - persistence -->
-		<mysql-connector-java.version>5.1.17</mysql-connector-java.version> <!-- latest version on: 02.10.2011 - http://dev.mysql.com/downloads/connector/j/ -->
+		<mysql-connector-java.version>5.1.18</mysql-connector-java.version> <!-- latest version on: 02.10.2011 - http://dev.mysql.com/downloads/connector/j/ -->
 		<hibernate.version>3.6.7.Final</hibernate.version>
 		<hibernate-commons-annotations.version>3.2.0.Final</hibernate-commons-annotations.version>
 		<commons-dbcp.version>1.4</commons-dbcp.version>
 
 		<!-- VERSIONS - logging -->
-		<log4j.version>1.2.16</log4j.version>
-		<org.slf4j.version>1.6.2</org.slf4j.version>
+		<org.slf4j.version>1.6.4</org.slf4j.version>
 
 		<!-- VERSIONS - testing -->
 		<org.hamcrest.version>1.3.RC2</org.hamcrest.version>
