Change some class

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,8 @@ log4j.category.org.springframework.context=WARN
 log4j.category.org.springframework.beans=WARN
 # DEBUG, WARN otherwise
 log4j.category.org.springframework.core=WARN
-
+# DEBUG, WARN otherwise
+log4j.category.org.springframework.web=WARN
 
 # HIBERNATE Categories(INFO) 
 # http://docs.jboss.org/hibernate/core/3.6/reference/en-US/html/session-configuration.html#configuration-logging
@@ -28,12 +29,12 @@ log4j.category.javax.servlet.http=INFO
 
 
 # MINE 
-log4j.category.org.rest=TRACE
+log4j.category.com.guigrasoft.remote=TRACE
 
 
 # ---------------------------------------- APPENDERS ------------------------------------------------------------
 
 log4j.appender.infrastructure=org.apache.log4j.FileAppender
-log4j.appender.infrastructure.File=/opt/logs/odesk/infrastructure.log
+log4j.appender.infrastructure.File=/home/ctl/git/github/REST/infrastructure.log
 log4j.appender.infrastructure.layout=org.apache.log4j.PatternLayout
 log4j.appender.infrastructure.layout.ConversionPattern=%d{HH:mm:ss} (%t) %-5p [%c] - %m%n
